// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Child node 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Dark tone class + light tone 1`] = `
<div
  className="pe-list-tile           pe-light-tone pe-list-tile--front "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front "
      key="front"
    >
      <Icon
        size="medium"
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Dark tone class + light tone class 1`] = `
<div
  className="pe-list-tile            pe-list-tile--front pe-light-tone"
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front "
      key="front"
    >
      <Icon
        size="medium"
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`No options 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    />
  </div>
</div>
`;

exports[`Option: child (JSX) 1`] = `
<ListTile
  front={
    <Icon>
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z"
        />
      </svg>
    </Icon>
  }
  title="Ancillary Justice"
/>
`;

exports[`Option: class 1`] = `
<div
  className="pe-list-tile             class-x"
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    />
  </div>
</div>
`;

exports[`Option: className 1`] = `
<div
  className="pe-list-tile             className-x"
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    />
  </div>
</div>
`;

exports[`Option: compact front (Icon) 1`] = `
<div
  className="pe-list-tile            pe-list-tile--front "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front pe-list-tile--compact-front"
      key="front"
    >
      <Icon
        size="medium"
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: content 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <Icon
      svg={
        Object {
          "content": <div
            dangerouslySetInnerHTML={
              Object {
                "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
              }
            }
          />,
        }
      }
    />
  </div>
</div>
`;

exports[`Option: content 2`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      style={
        Object {
          "background": "#c5e1a5",
          "padding": "24px",
        }
      }
    >
      The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
    </div>
  </div>
</div>
`;

exports[`Option: disabled url -- dark tone class 1`] = `
<div
  className="pe-list-tile  pe-list-tile--disabled           "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: element 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <a
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    />
  </a>
</div>
`;

exports[`Option: events 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    onClick={[Function]}
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Click me
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: front (Icon) 1`] = `
<div
  className="pe-list-tile            pe-list-tile--front "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front "
      key="front"
    >
      <Icon
        size="medium"
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: front (avatar) 1`] = `
<div
  className="pe-list-tile            pe-list-tile--front "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front "
      key="front"
    >
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png"
      />
    </div>
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: highSubtitle 1`] = `
<div
  className="pe-list-tile            pe-list-tile--high-subtitle "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
      <div
        className="pe-list-tile__subtitle pe-list-tile__high-subtitle"
        key="highSubtitle"
      >
        The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: highSubtitle and compact 1`] = `
<div
  className="pe-list-tile    pe-list-tile--compact        pe-list-tile--high-subtitle "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
      <div
        className="pe-list-tile__subtitle pe-list-tile__high-subtitle"
        key="highSubtitle"
      >
        The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: highSubtitle and front (JSX) 1`] = `
<Route
  render={[Function]}
/>
`;

exports[`Option: highSubtitle and front -- dark tone class 1`] = `
<Route
  render={[Function]}
/>
`;

exports[`Option: highSubtitle and front 1`] = `
<Route
  render={[Function]}
/>
`;

exports[`Option: highlight (themed color) 1`] = `
<div
  className="pe-list-tile       pe-list-tile--highlight      tests-list-tile-themed-highlight-list-tile"
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: hoverable 1`] = `
<div
  className="pe-list-tile     pe-list-tile--hoverable        "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: id 1`] = `
<div
  className="pe-list-tile             "
  id="id-x"
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    />
  </div>
</div>
`;

exports[`Option: indent 1`] = `
<div
  className="pe-list-tile            pe-list-tile--front "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front "
      key="front"
    />
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: ink 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <Ripple
    key="ripple"
  />
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: ink with ripple options 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <Ripple
    key="ripple"
    opacityDecayVelocity={0.1}
  />
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: secondary (Icon) (RTL) 1`] = `
<div
  className="pe-rtl"
>
  <ListTile
    secondary={
      Object {
        "icon": Object {
          "size": "medium",
          "svg": Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          },
        },
      }
    }
    subtitle="The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before."
    title="Ancillary Justice"
  />
</div>
`;

exports[`Option: secondary (Icon) 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
  <div
    className="pe-list-tile__secondary"
    key="secondary"
  >
    <div
      className="pe-list-tile__content"
    >
      <Icon
        size="medium"
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Option: secondary (content) 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
  <div
    className="pe-list-tile__secondary"
    key="secondary"
  >
    <div
      className="pe-list-tile__content"
    >
      <Icon
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Option: secondary (url) 1`] = `
<Route
  render={[Function]}
/>
`;

exports[`Option: selectable 1`] = `
<div
  className="pe-list-tile      pe-list-tile--selectable       "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: selected 1`] = `
<div
  className="pe-list-tile pe-list-tile--selected            "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: style (colors) 1`] = `
<div
  className="pe-list-tile            pe-list-tile--front "
  style={
    Object {
      "backgroundColor": "#EF6C00",
      "color": "#fff",
    }
  }
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front "
      key="front"
    >
      <Icon
        size="medium"
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
    <div
      className="pe-list-tile__content"
      style={
        Object {
          "backgroundColor": "#EF6C00",
          "color": "#fff",
        }
      }
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: subContent 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
      <div
        key="subContent"
      >
        <div
          style={
            Object {
              "background": "#c5e1a5",
              "marginTop": "12px",
            }
          }
        >
          The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: subtitle 1`] = `
<div
  className="pe-list-tile            pe-list-tile--subtitle "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
      <div
        className="pe-list-tile__subtitle"
        key="subtitle"
      >
        The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: title 1`] = `
<div
  className="pe-list-tile             "
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
`;

exports[`Option: url (disabled) 1`] = `
<Route
  render={[Function]}
/>
`;

exports[`Option: url 1`] = `
<Route
  render={[Function]}
/>
`;

exports[`Themed (color and font size) -- dark tone class 1`] = `
<div
  className="pe-list-tile            pe-list-tile--front tests-list-tile-themed-list-tile"
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front "
      key="front"
    >
      <Icon
        size="medium"
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Themed (color and font size) 1`] = `
<div
  className="pe-list-tile            pe-list-tile--front tests-list-tile-themed-list-tile"
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content pe-list-tile__content-front "
      key="front"
    >
      <Icon
        size="medium"
        svg={
          Object {
            "content": <div
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg width=\\"24\\" height=\\"24\\" viewBox=\\"0 0 24 24\\"><path d=\\"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\\"/></svg>",
                }
              }
            />,
          }
        }
      />
    </div>
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        Ancillary Justice
      </div>
    </div>
  </div>
</div>
`;

exports[`Themed (title running on 2 lines) 1`] = `
<div
  className="pe-list-tile             tests-list-tile-themed-two-lines"
  tabIndex={0}
>
  <div
    className="pe-list-tile__primary"
    key="primary"
    style={null}
  >
    <div
      className="pe-list-tile__content"
    >
      <div
        className="pe-list-tile__title"
        key="title"
      >
        The body lay naked and facedown, a deathly gray, spatters of blood staining the snow around it. It was minus fifteen degrees Celsius and a storm had passed just hours before.
      </div>
    </div>
  </div>
</div>
`;
